Closed Bug 1361781 Opened 8 years ago Closed 8 years ago

nsLayoutUtils::SetFixedPositionLayerData fails to set the SideBits: eSideBitsTop and eSideBitsLeft

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: rbarker, Assigned: rbarker)

References

Details

Attachments

(1 file)

When a fixed element is fixed to either the top only or left only, the proper SideBits do not get set.
Assignee: nobody → rbarker
Blocks: 1358775
Comment on attachment 8864335 [details] Bug 1361781 - Ensure nsLayoutUtils::SetFixedPositionLayerData sets the SideBits: eSideBitsTop and eSideBitsLeft https://reviewboard.mozilla.org/r/135966/#review139584
Attachment #8864335 - Flags: review?(tnikkel) → review+
Pushed by rbarker@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/31e5f57bebfb Ensure nsLayoutUtils::SetFixedPositionLayerData sets the SideBits: eSideBitsTop and eSideBitsLeft r=tnikkel
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: